test/parser/function_call.error.2.err
EXPECTED_END_OF_ARGUMENT_LIST[1018] in test/parser/function_call.error.2.pytch, line 3, character 6:
Error: I was expecting a ',' or ')' after the previous argument.
   +-------------------------------------------------------------------------+
   | test/parser/function_call.error.2.pytch                                 |
 2 |   bar                                                                   |
 3 |   baz qux)                                                              |
   |      ^ Error: I was expecting a ',' or ')' after the previous argument. |
   +-------------------------------------------------------------------------+
